--- a/Codigo_P2/Solution/FrontEnd.Login/Views/Shared/_Layout.cshtml
+++ b/Codigo_P2/Solution/FrontEnd.Login/Views/Shared/_Layout.cshtml
@@ -48,6 +48,18 @@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Groups" asp-action="Index">Groups</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="GroupInvitations" asp-action="Index">Invitations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Pais" asp-action="Index">Pais</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Paises" asp-action="Index">Paises</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </li>
             </ul>
