--- a/Codigo_P2/Solution/FrontEnd.Login/Views/Shared/_Layout.cshtml
+++ b/Codigo_P2/Solution/FrontEnd.Login/Views/Shared/_Layout.cshtml
@@ -103,11 +103,18 @@
                     @RenderBody()
 
                 </div><!-- /.container-fluid -->
+
+                <div>
+                    <vc:Tas></vc:Tas>
+                </div>
+
+             
             </section>
             <!-- /.content -->
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
+            
             <div class="container">
                 &copy; 2021 - FrontEnd.API - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
