--- a/Codigo_P2/Solution/FrontEnd.Login/Views/Paises/Index.cshtml
+++ b/Codigo_P2/Solution/FrontEnd.Login/Views/Paises/Index.cshtml
@@ -1,3 +1,22 @@
 ﻿@model List<Pais>
 
-<p>Model</p>
+
+
+@using data = FrontEnd.Login.Models;
+
+@{
+    string fociname = ((data.Foci)ViewBag.Tas).FocusName;
+}
+
+<div>@ViewBag.Aux</div>
+<p></p>
+<div>@fociname</div>
+
+<p></p>
+
+<ul>
+    @foreach (var pais in Model)
+    {
+        <li>@pais.Nombre</li>
+    }
+</ul>
